--- a/packages/@vue-reactively/package.json
+++ b/packages/@vue-reactively/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@vuegamut/vue-aria",
+  "name": "vue-reactively",
   "version": "0.0.1",
-  "description": "Vue.js aria utilities and composables",
+  "description": "Vue.js state management utilities and composables",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -11,8 +11,8 @@
   },
   "keywords": [
     "vue",
-    "aria",
-    "accessibility",
+    "state",
+    "management",
     "composables"
   ],
   "author": "",
@@ -20,7 +20,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/vue-gamut/gamut.git",
-    "directory": "packages/@vue-aria"
+    "directory": "packages/@vue-reactively"
   },
   "homepage": "https://github.com/vue-gamut/gamut#readme",
   "peerDependencies": {
