--- a/packages/vue-reactively/package.json
+++ b/packages/vue-reactively/package.json
@@ -4,10 +4,14 @@
   "description": "Vue.js state management utilities and composables",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/types.d.ts",
+  "source": "src/index.ts",
   "scripts": {
     "build": "echo 'Build script not implemented yet'",
-    "test": "echo 'Test script not implemented yet'"
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [
     "vue",
@@ -20,9 +24,21 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/vue-gamut/gamut.git",
-    "directory": "packages/@vue-reactively"
+    "directory": "packages/vue-reactively"
   },
   "homepage": "https://github.com/vue-gamut/gamut#readme",
+  "dependencies": {
+    "@vue-reactively/collections": "^0.0.0",
+    "@vue-types/shared": "^0.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.0.0",
+    "@vue/test-utils": "^2.4.0",
+    "@vitest/ui": "^0.34.0",
+    "jsdom": "^22.0.0",
+    "vitest": "^0.34.0",
+    "vue": "^3.3.0"
+  },
   "peerDependencies": {
     "vue": "^3.0.0"
   },
